# popup-mcp

./: Cargo.toml  flake.nix
crates/popup-gui/: Cargo.toml
crates/popup-gui/src/: main.rs  theme.rs  transform.rs
crates/popup-gui/src/gui/: mod.rs
crates/popup-tui/: Cargo.toml
crates/popup-tui/src/: app.rs  lib.rs  render.rs  tests.rs  widgets.rs
docs/design-plans/: tui-renderer.md
