[package]
name = "popup-gui"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "popup_gui"
path = "src/lib.rs"

[[bin]]
name = "popup"
path = "src/main.rs"

[dependencies]
# Workspace crates
popup-common = { workspace = true }
popup-tui = { workspace = true }

# Workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }

# GUI-specific dependencies
env_logger = "0.11"
# Disable clipboard feature to fix WSL "Broken pipe" errors
# See: https://github.com/emilk/egui/issues/4938
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11"
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["svg", "image"] }
egui_commonmark = "0.20"
egui-twemoji = "0.7"
mcpr = "0.2.3"
which = "7"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
handlebars = "6.3"
toml = "0.9"

[dev-dependencies]
proptest = "1.0"
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
async = ["tokio"]
